--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "react-canvas-eye",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://noriokaki.github.io/react-canvas-eye",
     "dependencies": {
         "@types/jest": "24.0.18",
         "@types/node": "12.7.11",
@@ -13,6 +14,8 @@
         "typescript": "3.6.3"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -40,6 +43,7 @@
         "eslint-config-prettier": "^6.4.0",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-react": "^7.16.0",
+        "gh-pages": "^2.1.1",
         "husky": "^3.0.8",
         "lint-staged": "^9.4.2",
         "prettier": "^1.18.2"
